=================
Changes for Crate
=================

Unreleased
==========

 - Added columns ``number_of_shards`` and ``number_of_replicas`` to
   table ``information_schema.table_partitions``

 - Support `ON DUPLICATE KEY UPDATE` while inserting using a query.

 - Fix: Parameter substitution within subscript notation is not
   allowed anymore

 - Updated crash version to 0.11.2 which contains following changes:

    - added ``--format`` command line option
      to support different response output formats such as
      ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

    - BREAKING CHANGE
      the ``CONNECT <host>`` client command was changed to ``\connect <host>``
      see documentation for further details

    - alternative cli implementation using prompt_toolkit

    - added coloured printing when in interactive shell

 - Optimize OR queries which involve the cluster column.

 - Removed support for ``_version`` column in where clause if no
   primary key is specified in a query.

 - Added support for the ``IF EXISTS`` clause to ``DROP TABLE`` and
   ``DROP BLOB TABLE``

2015/02/18 0.47.4
=================

 - Fixed a race condition where some statements would break because of
   using a shared state internally.

 - Made zero length string routing consistent and route by the actual
   hash of an empty string instead of handling it as null. CAUTION: If
   you are using emtpy strings as routing values, affected records
   need to be re-inserted.

2015/02/17 0.47.3
=================

 - Fix: Inserting from a query which contains aggregation functions failed in some
   cases

2015/02/13 0.47.2
=================

 - Fix regression introduced in ``0.47.0``: It is now again possible to refer
   to columns using the fully qualified name including table name or alias in
   the WHERE clause of an Update statement.

 - Added a new option ``overwrite_duplicates`` to COPY FROM. This option can be